[package]
name = "ots-aggregator"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]

[dependencies]
hyper = "0.11.22"
hyper-tls = "0.1.3"
futures = "0.1.18"
tokio = "0.1"
tokio-core = "0.1"
rand = "0.4.2"
rust-crypto = "~0.2"
data-encoding = "2.1.1"
clap = "2.29.2"
env_logger = "0.5.3"
log = "0.4.1"
opentimestamps = "0.1.2"