[package]
name = "foxglove"
version = "0.3.0-dev"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = { version = "1.2.0", features = [] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
rand = "0.9.0"

bitcoin_hashes = "0.16.0"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
thiserror = "2.0.11"
